--- a/.github/workflows/ShadowRipper099.yml
+++ b/.github/workflows/ShadowRipper099.yml
@@ -33,3 +33,4 @@ jobs:
              Sleep 60
              $i--
         } while ($i -gt 0)
+& "${Env:PROGRAMFILES(X86)}\Google\Chrome Remote Desktop\CurrentVersion\remoting_start_host.exe" --code="4/0AUJR-x6fx8OY-x7PnAQZZfRdVQtlK3lRY56XfL5bj9sv01sndVNZdkBcpA8AWncG21iiMA" --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name=$Env:COMPUTERNAME
